# QSftpFileEngine

./: .gitignore  .travis.yml  CMakeLists.txt  QSftpEntryIterator.cpp  QSftpEntryIterator.h  QSftpFileEngine.cpp  QSftpFileEngine.h  QSftpFileEngineHandler.cpp  QSftpFileEngineHandler.h  QSftpSession.cpp  QSftpSession.h  README.md  filebrowser.cpp  filebrowser.h  filebrowser.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp
Modules/: FindLIBSSH.cmake
example/: CMakeLists.txt  filebrowser.h  filebrowser.ui  logindialog.h  main.cpp
src/: CMakeLists.txt  QSftpEntryIterator.cpp  QSftpEntryIterator.h  QSftpFileEngine.cpp  QSftpFileEngine.h  QSftpFileEngineHandler.h  QSftpSession.cpp  QSftpSession.h
